<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvOpcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcoes"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btPedra"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/pedra" />

        <Button
            android:id="@+id/btPapel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/papel" />

        <Button
            android:id="@+id/btTesoura"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/tesoura" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultimaJogada"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/jogadaPlayer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/jogadaPC" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivJogadaPlayer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0.5" />

        <ImageView
            android:id="@+id/ivJogadaPC"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venceu" />
</LinearLayout>

